@@ -1,5 +1,10 @@
 2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
 
+	* OggPlayer.cs: Bugfix: Changed handling of EOF to prevent
+	  cutting off when buffer size and/or count is very large
+
+2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
+
 	* OggFile.cs: Added RemoveTag & RemoveAllTags functions
 
 2010-04-24  El Dragon  <thedragon@the-dragons-nest.co.uk>
